log/build_2021-05-11_10-36-05/ros2yolo/stdout_stderr.log
running egg_info
writing ../build/ros2yolo/ros2yolo.egg-info/PKG-INFO
writing dependency_links to ../build/ros2yolo/ros2yolo.egg-info/dependency_links.txt
writing entry points to ../build/ros2yolo/ros2yolo.egg-info/entry_points.txt
writing requirements to ../build/ros2yolo/ros2yolo.egg-info/requires.txt
writing top-level names to ../build/ros2yolo/ros2yolo.egg-info/top_level.txt
reading manifest file '../build/ros2yolo/ros2yolo.egg-info/SOURCES.txt'
writing manifest file '../build/ros2yolo/ros2yolo.egg-info/SOURCES.txt'
running build
running build_py
copying ros2yolo/yolo_map.py -> /home/mingyu/rosyolo_final/build/ros2yolo/build/lib/ros2yolo
running install
running install_lib
copying /home/mingyu/rosyolo_final/build/ros2yolo/build/lib/ros2yolo/yolo_map.py -> /home/mingyu/rosyolo_final/install/ros2yolo/lib/python3.8/site-packages/ros2yolo
byte-compiling /home/mingyu/rosyolo_final/install/ros2yolo/lib/python3.8/site-packages/ros2yolo/yolo_map.py to yolo_map.cpython-38.pyc
  File "/home/mingyu/rosyolo_final/install/ros2yolo/lib/python3.8/site-packages/ros2yolo/yolo_map.py", line 29
    def point_mark(x1,x2,y1,y2,data)
                                       ^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/mingyu/rosyolo_final/install/ros2yolo/lib/python3.8/site-packages/ros2yolo-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../build/ros2yolo/ros2yolo.egg-info to /home/mingyu/rosyolo_final/install/ros2yolo/lib/python3.8/site-packages/ros2yolo-0.0.0-py3.8.egg-info
running install_scripts
Installing ros2_yolo script to /home/mingyu/rosyolo_final/install/ros2yolo/lib/ros2yolo
Installing yolo_map script to /home/mingyu/rosyolo_final/install/ros2yolo/lib/ros2yolo
writing list of installed files to '/home/mingyu/rosyolo_final/build/ros2yolo/install.log'
